@@ -1,3 +1,10 @@
+2002-02-15  Michael Meeks  <michael@ximian.com>
+
+	* bonobo/Makefile.am: add deprecated flags.
+
+	* tests/test-moniker.c (display_as_control): fix
+	ref. leak.
+
 2002-02-14  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/bonobo-control-frame.c
